# forcemax

./: .gitignore  BUILDING.MD  CMakeLists.txt  CMakeSettings.json  README.md
res/: forcemax.rc
src/: forcemax.c
